--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
-    "@popclip/types": "^1.4675.0",
-    "js-yaml": "^4.1.0",
-    "typescript": "^5.7.3"
+    "axios": "^1.8.1",
+    "js-yaml": "^4.1.0"
   },
   "scripts": {
     "build": "tsc",
     "postbuild": "cpx \"src/**/*.{png,json}\"  ./build"
   },
   "devDependencies": {
+    "@popclip/types": "^1.4675.0",
     "@types/js-yaml": "^4.0.9",
-    "cpx": "^1.5.0"
+    "cpx": "^1.5.0",
+    "typescript": "^5.7.3"
   }
 }
